src/components/shared/shared.css
/* Header */
.app-header-container {
  padding: 18px 36px;
  border-bottom: 1px solid var(--primary-2);

  position: sticky;
  background-color: var(--gray-1);
  top: 0;
  display: flex;
  align-items: center;
}

.logo {
  font-weight: 600;
  font-size: 2rem;
  cursor: pointer;

  border: 2px solid var(--primary-2);
  padding: 4px;
}

.header-icon {
  height: 20px;
  width: 20px;
  cursor: pointer;
}

.user-actions {
  margin-left: auto;
  display: flex;
  align-items: center;
  gap: 16px;
}

.login-btn {
  border: 1px solid var(--black-1);
  display: inline-block;
  padding: 4px;
  cursor: pointer;
  font-weight: 500;

  transition: color .2s, background-color .2s;
}

.login-btn:hover {
  color: var(--black-1);
  background-color: var(--primary-1);
}


/* Footer */
.app-footer {
  display: flex;
  background-color: var(--gray-1);
  justify-content: space-between;
  align-items: center;

  padding: .8rem 1.6rem;
  font-weight: 500;
  font-style: italic;
}

.app-footer a,
.app-footer a:visited,
.app-footer a:active {
  text-decoration: none;
  color: var(--black-1)
}

